relay/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluesky-relay
  namespace: bluesky
spec:
  selector:
    matchLabels:
      app: bluesky-relay
  replicas: 5
  template:
    metadata:
      labels:
        app: bluesky-relay
    spec:
      containers:
      - name: bluesky-relay
        image: theosanderson/bluesky-relay:latest  # Replace with your image
        imagePullPolicy: Always
        ports:
        - containerPort: 8765
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8090
          initialDelaySeconds: 5
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /readyz
            port: 8090
          initialDelaySeconds: 5
          periodSeconds: 10
